# gov_docs

./: CareerKaki - Research Project Brief.docx  mddi_sentiments_training_cross v2.ipynb  medusa eval.ipynb  medusa.ipynb  reach_classification_llama.ipynb  reach_classification_mistral.ipynb  reach_modernbert_truncated.ipynb
FDT-terraform/: addon_secretsmanager_secret.tf  cw_log_group.tf  cw_metric_alarm.tf  data.baseline.locals.tf  ecr_repository.tf  ecs_cluster.tf  ecs_service.tf  ecs_task.tf  iam_role.tf  lb_listener_rule.tf  lb_target_group.tf  main_variable.tf  output.tf  run_deploy.sh  run_destroy.sh
GCC-Block3-ECS-Deployment/: ECS Deployment b5dbe77183c74374bf5a580af76ac766.html
acra/: README.md
acra/notebook/: .env  ACRA-SSIC non-PALM classifier.ipynb  (+2 more)
aibots-api-develop/: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  noxfile.py
aibots-api-develop/aibots/: .gitlab-ci.yml  README.md  noxfile.py  pyproject.toml
aibots-api-develop/aibots/aibots/: constants.py
aibots-api-develop/aibots/aibots/models/: __init__.py  agents.py  chats.py  files.py  knowledge_bases.py  rag_configs.py
aibots-api-develop/aibots/aibots/models/rags/: __init__.py  api.py  internal.py
aibots-api-develop/aibots/aibots/rags/: __init__.py  aibots.py  base.py  govtext.py  llm_stack.py
aibots-api-develop/aibots/tests/aibots/rag/: conftest.py  test_govtextengine_embed.py  test_govtextengine_query.py
aibots-api-develop/experimental/aibots_rag/rag/aio/scrappy/: Dockerfile  alzheimers.txt  lambda_function.py  pyproject.toml  requirements.txt  story.txt
aibots-api-develop/experimental/aibots_rag/rag/chunk/dataframe_clustering_chunker/: lambda_function.py  noxfile.py  pyproject.toml
aibots-api-develop/experimental/aibots_rag/rag/chunk/dataframe_clustering_chunker/tests/: conftest.py  test_dataframe_clustering_chunker.py
aibots-api-develop/rag/status/govtext/: compose.dev.yaml  compose.test.yaml  lambda_function.py  noxfile.py  pyproject.toml
aibots-api-develop/rag/status/govtext/tests/: conftest.py  test_govtext_executor.py  test_govtext_lambda_handler.py
aibots-infra-develop/: .gitignore  .gitlab-ci.yml  README.md  all.sh  load.sh  run.sh
automated-red-teaming-main/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-BE  README.md  docker-compose.yml
deploy-fargate-sample-source/: addon_secretsmanager_secret.tf  cw_log_group.tf  cw_metric_alarm.tf  data.0010-sharedinfra.vpc.tf  data.0020-sharedinfra-endpt.tf.WAIT  data.0022-sharedinfra-ingress.tf  data.0210-launchpad.security_group.tf  data.0210-launchpad.subnets.tf  data.baseline.locals.tf  data.baseline.provider.tf  ecs_cluster.tf  ecs_cluster_capacity_providers.tf  ecs_service.tf  ecs_task.tf  iam_role.tf  lb_listener_rule.tf  lb_target_group.tf  main_backend.tf  main_variable.tf  output.tf
dev-moonshot-api-lambda/: .env  .env.uat  .gitignore  .prettierrc  .pylintrc  README.md  gen_requirements.sh  pyproject.toml  requirements.txt  requirements_dev.txt
dev-moonshot-api-lambda/Markdown-3.4.1.dist-info/: RECORD
dev-moonshot-api-lambda/aiohttp-3.8.3.dist-info/: RECORD
dev-moonshot-api-lambda/app/: config.py  main.py
dev-moonshot-api-lambda/app/api_v1/: auth.py  common.py  routers.py  settings.py
dev-moonshot-api-lambda/app/common/: auth_types.py  aws.py  datetime_util.py  mail_task_type.py  mail_util.py  otp_model.py  token_util.py  usage_audit_model.py
dev-moonshot-api-lambda/app/common/email_template/: ai_template.html  email_footer.html  full_email_template.html  user_template.html
dev-moonshot-api-lambda/app/models/apikey/: apikey_model.py  apikey_router.py
dev-moonshot-api-lambda/app/models/bloom/: bloom_model.py  bloom_router.py
dev-moonshot-api-lambda/app/models/cohere/: cohere_model.py  cohere_router.py
dev-moonshot-api-lambda/app/models/flan/: flan_model.py  flan_router.py
dev-moonshot-api-lambda/app/models/gpt/: gpt_model.py  gpt_router.py
dev-moonshot-api-lambda/app/models/h2oai/: h2oai_model.py  h2oai_router.py
dev-moonshot-api-lambda/app/models/inference/: inference_model.py  inference_router.py
dev-moonshot-api-lambda/app/models/lightgpt/: lightgpt_model.py  lightgpt_router.py
dev-moonshot-api-lambda/app/models/llmstack/: llmstack_router.py
dev-moonshot-api-lambda/app/models/palm/: palm_chat_model.py  palm_router.py  palm_text_model.py
dev-moonshot-api-lambda/app/models/response/: response_model.py  response_router.py
dev-moonshot-api-lambda/app/models/services/: services_model.py  services_router.py
dev-moonshot-api-lambda/app/models/stability/: stability_model.py  stability_router.py
dev-moonshot-api-lambda/app/models/summary/: summary_model.py  summary_router.py
dev-moonshot-api-lambda/app/utils/: auth_util.py  dynamo_util.py  dynamodb_model.py  file_util.py  img_gen_util.py  llm_util.py  module_util.py  query_util.py  re_util.py  s3_file.py  s3_util.py  secret_manager_util.py  ses_types.py  ses_util.py  sns_util.py  url_util.py
dev-moonshot-api-lambda/charset_normalizer-2.0.12.dist-info/: RECORD
dev-moonshot-api-lambda/email_validator-1.1.3.dist-info/: RECORD
dev-moonshot-api-lambda/fsspec-2023.5.0.dist-info/: RECORD
dev-moonshot-api-lambda/gradio_client-0.2.5.dist-info/: METADATA  RECORD
dev-moonshot-api-lambda/httpx-0.24.1.dist-info/: RECORD
dev-moonshot-api-lambda/huggingface_hub-0.15.1.dist-info/: RECORD
dev-moonshot-api-lambda/mangum-0.12.4.dist-info/: METADATA  RECORD
dev-moonshot-api-lambda/openai-0.27.0.dist-info/: RECORD
dev-moonshot-api-lambda/palm_service_account/: moonshot-poc-dev.json
dev-moonshot-api-lambda/python_dotenv-0.19.2.dist-info/: RECORD
dev-moonshot-api-lambda/test/: README.md
dev-moonshot-api-lambda/test/api_v1/: test_auth.py
dev-moonshot-api-lambda/tqdm-4.65.0.dist-info/: RECORD
dev-moonshot-api-lambda/uvicorn-0.17.0.post1.dist-info/: RECORD
microsoft-govtech-code-sharing-repo-main/: README.md
sentosa/: Examples.txt  Presentation1.pptx  prompt.py  sentosa_feedback.csv
whitespace-lambda-layers-main/: .gitignore  README.md  create_lambda_layer.sh  create_lambda_layer1.sh.bak
(+1019 files in other folders)
