[project]
name = ""
version = ""
description = ""
authors = [
    {name = "qinjie", email = "mark.qj@gmail.com"},
]
dependencies = ["anyio==3.3.4", "certifi==2021.10.8", "charset-normalizer==2.0.7", "dnspython==2.1.0", "email-validator==1.1.3", "et-xmlfile==1.1.0", "faker==10.0.0", "fastapi==0.70.0", "idna==3.3", "mangum==0.11.0", "openpyxl==3.0.9", "pydantic==1.8.2", "pyjwt==2.3.0", "pymongo==3.11.4", "python-dateutil==2.8.2", "python-dotenv==0.19.2", "python-multipart==0.0.5", "requests==2.26.0", "six==1.16.0", "sniffio==1.2.0", "starlette==0.16.0", "text-unidecode==1.3", "typing-extensions==3.10.0.2", "urllib3==1.26.7", "email-validator", "python-multipart", "openpyxl", "pandas", "numpy", "boto3", "botocore"]
requires-python = ">=3.8"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
